add social links

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a href="https://github.com/thiagocfl" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/thiagocarlosfranca/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
         <a href="#" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/thiago-lucena-dev/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
